--- a/iPortfolio/assets/css/style.css
+++ b/iPortfolio/assets/css/style.css
@@ -212,7 +212,8 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100vh;
   background: url("../img/vs-code.png") top center;
-  background-size: cover;
+  /* background-size: cover; */
+  object-fit: contain;
 }
 
 #hero:before {
