--- a/iPortfolio/assets/css/style.css
+++ b/iPortfolio/assets/css/style.css
@@ -216,9 +216,9 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/vs-code.png") top center;
-  /* background-size: cover; */
-  object-fit: contain;
+  background: url("../../assets/img/portfolio/background-image.png") top center;
+  background-size: cover;
+  /* object-fit: contain; */
 }
 
 #hero:before {
