--- a/iPortfolio/assets/css/style.css
+++ b/iPortfolio/assets/css/style.css
@@ -459,6 +459,10 @@ section {
   margin-bottom: 10px;
 }
 
+.summary {
+  font-family: "Poppins", sans-serif;
+}
+
 .resume .resume-item h5 {
   font-size: 16px;
   background: #e4edf9;
