--- a/iPortfolio/assets/css/style.css
+++ b/iPortfolio/assets/css/style.css
@@ -253,6 +253,11 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Poppins", sans-serif;
 }
 
+.applicationsFont {
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+}
+
 #hero p span {
   color: #fff;
   padding-bottom: 4px;
